# C-STUDY

Day1/Test/: Test.sln
Day1/Test/Test/: Test.cpp  Test.vcxproj
Day1/Test/Test/x64/Debug/: Test.exe.recipe  Test.ilk  vc143.idb
Day1/Test/Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Day17/zv_audio-next/zv_audio-next/: .gitignore  .gitmodules  CMakeLists.txt  common.cmake  conf  deb.cmake  readme.md
Day17/zv_audio-next/zv_audio-next/test/: CMakeLists.txt
Day17/zv_audio-next/zv_audio-next/test/src/: main.cpp
Day17/zv_audio-next/zv_audio-next/zdp_protocol/: zdp_channel_audio.h  zdp_channel_clipboard.h  zdp_channel_cursor.h  zdp_channel_display.h  zdp_channel_events.h  zdp_channel_inputs.h  zdp_channel_main.h  zdp_channel_proxy.h  zdp_channel_stream.h  zdp_channel_types.h  zdp_channel_usbredir.h  zdp_display_types.h  zdp_error_code.h  zdp_interface.h  zdp_protocol.h
Day17/zv_audio-next/zv_audio-next/zv_audio/: CMakeLists.txt
Day17/zv_audio-next/zv_audio-next/zv_audio/include/: audio_channel.h  audio_playback.h  audio_record.h  audio_session.h  unpack_helper.h  zv_audio.def  zv_audio.h  zv_buffer.h  zva_common.h
Day17/zv_audio-next/zv_audio-next/zv_audio/src/: audio_channel.cpp  audio_playback.cpp  audio_record.cpp  audio_session.cpp  unpack_helper.cpp  zv_audio.cpp  zv_buffer.cpp
Day17/zv_audio-next/zv_audio-next/zva_util/: CMakeLists.txt
Day17/zv_audio-next/zv_audio-next/zva_util/include/: zva_event.h  zva_log.h  zva_util.h
Day17/zv_audio-next/zv_audio-next/zva_util/src/: zva_log.cpp  zva_util.cpp
Day2/: readme.md
Day3/DS/: DS.sln
Day3/DS/DS/: DS.cpp  DS.vcxproj
Day3/DS/DS/x64/Debug/: DS.exe.recipe  DS.ilk  vc143.idb
Day3/DS/DS/x64/Debug/DS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
